--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>oop</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.2</junit.version>
